implementing manual ugrading